version/0.5/_sources/api/ansys/heart/postprocessor/klotz_curve/EDPVR.rst.txt


:class:`EDPVR`
==============

.. py:class:: ansys.heart.postprocessor.klotz_curve.EDPVR(vm, pm)

   
   End diastolic pressure-volume relation.













   .. rubric:: Notes

   Ref: Klotz, et al. Nature protocols 2.9 (2007): 2152-2158.



   ..
       !! processed by numpydoc !!


.. py:currentmodule:: EDPVR

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~get_constants`
            - Get constants.
          * - :py:attr:`~get_pressure`
            - Get pressure.
          * - :py:attr:`~get_volume`
            - Get volume.
          * - :py:attr:`~plot_EDPVR`
            - Plot end-diastolic pressure-volume relation.



   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~An`
            - 
          * - :py:attr:`~Bn`
            - 
          * - :py:attr:`~vm`
            - 
          * - :py:attr:`~pm`
            - 
          * - :py:attr:`~v0`
            - 
          * - :py:attr:`~v30`
            - 






Import detail
-------------

.. code-block:: python

    from ansys.heart.postprocessor.klotz_curve import EDPVR



Attribute detail
----------------
.. py:attribute:: An
   :value: 27.78


.. py:attribute:: Bn
   :value: 2.76


.. py:attribute:: vm

.. py:attribute:: pm

.. py:attribute:: v0

.. py:attribute:: v30



Method detail
-------------
.. py:method:: get_constants()

   
   Get constants.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_pressure(volume)

   
   Get pressure.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_volume(pressure)

   
   Get volume.
















   ..
       !! processed by numpydoc !!

.. py:method:: plot_EDPVR(simulation_data=None)

   
   Plot end-diastolic pressure-volume relation.


   :Parameters:

       **simulation_data: optional, plot if exist.**
           ..














   ..
       !! processed by numpydoc !!


